--- a/templates/index.html
+++ b/templates/index.html
@@ -92,25 +92,52 @@
         id="itemModal"
         class="fixed inset-0 z-50 hidden bg-gray-800 rounded-lg justify-center items-center backdrop-blur-sm"
         onclick="closeItemPage(event)"
-        <div class="bg-white rounded-lg shadow-2xl w-11/12 md:w-1/2 lg:w-1/3 overflow-hidden relative" onclick="event.stopPropagation()">
-          <button onclick="closeItemPage()" class="absolute top-2 right-3 text-gray-500 text-2xl font-bold hover:border-gray-200">&times;</button>
+      >
+        <div
+          class="bg-white rounded-lg shadow-2xl w-11/12 md:w-1/2 lg:w-1/3 overflow-hidden relative"
+          onclick="event.stopPropagation()"
+        >
+          <button
+            onclick="closeItemPage()"
+            class="absolute top-2 right-3 text-gray-500 text-2xl font-bold hover:border-gray-200"
+          >
+            &times;
+          </button>
           <div class="p-6">
-            <img src="{{ skin.image }}" alt="{{ skin.name }}" class="w-full h-64 object-cover rounded-md mb-4">
+            <img
+              src="{{ skin.image }}"
+              alt="{{ skin.name }}"
+              class="w-full h-64 object-cover rounded-md mb-4"
+            />
             <div class="flex justify-between items-start mb-2">
-              <h2 id="itemTitle" class="text-2xl font-font-semibold text-gray-200">{{ skin.name }}</h2>
-              <span id="itemPrice" class="text-xl font-semibold text-green-600">{{ skin.price }}€</span>
+              <h2
+                id="itemTitle"
+                class="text-2xl font-font-semibold text-gray-200"
+              >
+                {{ skin.name }}
+              </h2>
+              <span id="itemPrice" class="text-xl font-semibold text-green-600"
+                >{{ skin.price }}€</span
+              >
             </div>
 
             <div class="flex gap-4">
-              <button onclick="addToCart()" class="flex-1 bg-green-600 text-white py-2 rounded-md hover:border-gray-200 transition-colors font-semibold">Add to Cart</button>
-              <button onclick="closeItemPage()" class="px-4 border border-gray-400 rounded-md hover:border-gray-200">Cancel</button>
+              <button
+                onclick="addToCart()"
+                class="flex-1 bg-green-600 text-white py-2 rounded-md hover:border-gray-200 transition-colors font-semibold"
+              >
+                Add to Cart
+              </button>
+              <button
+                onclick="closeItemPage()"
+                class="px-4 border border-gray-400 rounded-md hover:border-gray-200"
+              >
+                Cancel
+              </button>
             </div>
-
           </div>
-
         </div>
-
-      ></div>
+      </div>
 
       <div
         class="flex justify-center items-center gap-4 mt-8 py-6 border-t border-gray-700"
