--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="mx-auto max-w-7xl p-6 flex flex-col md:flex-row gap-6">
 
-    <aside class="w-full md:w-64 flex-shrink-0">
+    <aside class="w-full md:w-64 shrink-0">
         <form id="filterForm" action="/" method="GET"
             class="bg-gray-800 p-4 rounded-card border border-gray-700 space-y-6 sticky top-6">
 
@@ -84,7 +84,7 @@
         </form>
     </aside>
 
-    <div class="flex-grow">
+    <div class="grow">
         {% if grouped_view %}
         <h2 class="text-xl font-bold text-gray-400 mb-4">Browsing {{ browse_title }}</h2>
 
@@ -106,11 +106,5 @@
         {% endif %}
     </div>
 </div>
-
-<script>
-    function setWear(min, max) {
-        document.getElementById('min_float').value = min;
-        document.getElementById('max_float').value = max;
-    }
-</script>
+<script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
 {% endblock %}
